2006-10-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_compile): Use subst, for maintainer-check.

2006-10-09  andi5.py@gmx.net  (tiny change)

	For PR automake/505:
	* lib/am/configure.am (am__CONFIG_DISTCLEAN_FILES): 
	Fix typo: `config.status.lineno', not `configure.status.lineno'.

2006-09-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Mention that `install-sh' needs executable permissions.
	* tests/nobase.test: Adjust.
	Report by Patrick Welche.

2006-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/check.am (check-TESTS): Fix matching of XFAIL_TESTS
	against currently running test for the first and last element
	of $(TESTS): add spacing so Solaris make does VPATH expansion
	on these words, too.
	* tests/check6.test: Update.

2006-08-30  Paul Eggert  <eggert@cs.ucla.edu>

	For PR automake/501:
	* lib/am/depend2.am (?GENERIC?%EXT%.o, ?!GENERIC?%OBJ%):
	Abbreviate output a bit by not bothering to quote the .Po file
	name (the quoting doesn't suffice in general anyway), and by not
	bothering to remove junk .Tpo files (as they'll be removed later).
	This also lets 'make' run faster by avoiding a subshell.

2006-08-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in: Fortran 77 and Fortran should require variables
	F77 resp. FC to be defined, and suggest the respective Autoconf
	macros otherwise.
	* tests/fort1.test: New test.
	* tests/Makefile.am: Update.

	* tests/ext.test: Add extensions f95, F90, F95.

2006-08-30  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/500:
	* automake.in (handle_compile) <$default_includes>: Do not output
	the same -I twice.  Use @am__isrc@ instead of ` -I$(srcdir)'.
	* m4/init.m4: Define am__isrc as ` -I$(srcdir)' only in
	non-VPATH builds since we always have `-I.'.
	* tests/subpkg.test: Make sure config headers are found in VPATH
	and non-VPATH builds.

2006-08-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi, lib/Automake/Rule.pm: Fix some typos.