@@ -257,7 +257,7 @@ my $gen_copyright = "\
 # PARTICULAR PURPOSE.
 ";
 
-# These constants are returned by lang_*_rewrite functions.
+# These constants are returned by the lang_*_rewrite functions.
 # LANG_SUBDIR means that the resulting object file should be in a
 # subdir if the source file is.  In this case the file name cannot
 # have `..' components.
@@ -271,7 +271,7 @@ use constant COMPILE_LIBTOOL  => 1;
 use constant COMPILE_ORDINARY => 2;
 
 # We can't always associate a location to a variable or a rule,
-# when its defined by Automake.  We use INTERNAL in this case.
+# when it's defined by Automake.  We use INTERNAL in this case.
 use constant INTERNAL => new Automake::Location;
 
 
@@ -1128,7 +1128,7 @@ sub get_object_extension ($)
 
 # check_user_variables (@LIST)
 # ----------------------------
-# Make sure each variable VAR in @LIST do not exist, suggest using AM_VAR
+# Make sure each variable VAR in @LIST does not exist, suggest using AM_VAR
 # otherwise.
 sub check_user_variables (@)
 {
@@ -1260,7 +1260,7 @@ sub handle_languages
 	    # objects in sub-directories too.  Dependencies should
 	    # go into the appropriate sub-directories, e.g.,
 	    # `sub/$(DEPDIR)/'.  The value of this directory
-	    # need the be computed on-the-fly.
+	    # needs to be computed on-the-fly.
 	    #
 	    # DEPBASE holds the name of this directory, plus the
 	    # basename part of the object file (extensions Po, TPo,
@@ -1745,7 +1745,7 @@ sub handle_single_transform ($$$$$%)
 	    # thought that inferences rules would work for
 	    # subdirectory objects too.  Later, on 1999-11-22,
 	    # automake was changed to output explicit rules even for
-	    # subdir-objects.  Nobody remembers why, but this occured
+	    # subdir-objects.  Nobody remembers why, but this occurred
 	    # soon after the merge of the user-dep-gen-branch so it
 	    # might be related.  In late 2003 people complained about
 	    # the size of the generated Makefile.ins (libgcj, with
@@ -2123,9 +2123,9 @@ sub handle_lib_objects
 	   if ($val !~ /^-[lL]/ &&
 	       # Skip -dlopen and -dlpreopen; these are explicitly allowed
 	       # for Libtool libraries or programs.  (Actually we are a bit
-	       # laxest here since this code also applies to non-libtool
+	       # laxe here since this code also applies to non-libtool
 	       # libraries or programs, for which -dlopen and -dlopreopen
-	       # are pure non-sence.  Diagnosting this doesn't seems very
+	       # are pure nonsense.  Diagnosing this doesn't seems very
 	       # important: the developer will quickly get complaints from
 	       # the linker.)
 	       $val !~ /^-dl(?:pre)?open$/ &&
@@ -3557,7 +3557,7 @@ sub for_dist_common
 # Handle 'dist' target.
 sub handle_dist ()
 {
-  # Substutions for distdit.am
+  # Substitutions for distdir.am
   my %transform;
 
   # Define DIST_SUBDIRS.  This must always be done, regardless of the
@@ -3812,7 +3812,7 @@ sub substitute_ac_subst_variables_worker($)
 
 # substitute_ac_subst_variables ($TEXT)
 # -------------------------------------
-# Replace any occurence of ${FOO} in $TEXT by @FOO@ if FOO is an AC_SUBST
+# Replace any occurrence of ${FOO} in $TEXT by @FOO@ if FOO is an AC_SUBST
 # variable.
 sub substitute_ac_subst_variables ($)
 {
@@ -4975,7 +4975,7 @@ sub scan_autoconf_traces ($)
           next if $macro ne 'm4_include' && ! -f $args[1];
 
 	  # Some modified versions of Autoconf don't use
-	  # forzen files.  Consequently it's possible that we see all
+	  # frozen files.  Consequently it's possible that we see all
 	  # m4_include's performed during Autoconf's startup.
 	  # Obviously we don't want to distribute Autoconf's files
 	  # so we skip absolute filenames here.
@@ -4998,7 +4998,7 @@ sub scan_autoconf_traces ($)
 	{
 	  # _LT_AC_TAGCONFIG is an old macro present in Libtool 1.5.
 	  # We use it to detect whether tags are supported.  Our
-	  # prefered interface is LT_SUPPORTED_TAG, but it was
+	  # preferred interface is LT_SUPPORTED_TAG, but it was
 	  # introduced in Libtool 1.6.
 	  if (0 == keys %libtool_tags)
 	    {
@@ -7198,7 +7198,7 @@ sub require_file_internal ($$$@)
 	      next
 		if $found_it && $force_missing;
 
-	      # If we couldn' install the file, but it is a target in
+	      # If we couldn't install the file, but it is a target in
 	      # the Makefile, don't print anything.  This allows files
 	      # like README, AUTHORS, or THANKS to be generated.
 	      next
