@@ -1,3 +1,8 @@
+2006-10-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* automake.in: Fix some typos in comments.
+	* lib/Automake/Variable.pm: Likewise.
+
 2006-10-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* automake.in (handle_compile): Use subst, for maintainer-check.
